# onnxruntime-inference-examples

./: .gitignore  README.md
.ipynb_checkpoints/: README-checkpoint.md
linux-aarch64/: README.md
linux-aarch64/libs/: init.sh
linux-aarch64/src/: CMakeLists.txt
linux-x64/: README.md
linux-x64/libs/: init.sh
linux-x64/src/: CMakeLists.txt  iris_DNN.cpp
onnxruntime-linux-aarch64-1.12.1/: README.md
onnxruntime-linux-aarch64-1.12.1/src/: iris_DNN.cpp
onnxruntime-linux-x64-1.12.1/: README.md  main
onnxruntime-linux-x64-1.12.1/src/: CMakeLists.txt
onnxruntime-osx-x86_64-1.12.1/: CMakeLists.txt  README.md  main
osx-x86_64/: README.md
osx-x86_64/libs/: init.sh
osx-x86_64/src/: CMakeLists.txt
win-x64/: README.md
win-x64/libs/: init.sh
win-x64/libs/onnxruntime-win-x64-1.15.1/: CodeSignSummary-7a6b5595-8cab-4e74-ac22-140a4e520394.md  GIT_COMMIT_ID  README.md
win-x64/src/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  iris_DNN-checkpoint.cpp
